--- a/game.ipynb
+++ b/game.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1baea40f",
    "metadata": {},
    "outputs": [
@@ -17,6 +17,8 @@
     }
    ],
    "source": [
+    "#vfinal\n",
+    "\n",
     "# turnquest_advanced_v3.py\n",
     "import pygame, sys, random\n",
     "from dataclasses import dataclass, field\n",
